Fix Game of 24 + ToT example (or rather start fixing)

--- a/environments/game_of_24/reflexion.ipynb
+++ b/environments/game_of_24/reflexion.ipynb
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.621038Z",
-     "start_time": "2024-03-06T15:14:55.614612Z"
+     "end_time": "2024-03-06T15:46:17.553688Z",
+     "start_time": "2024-03-06T15:46:16.522524Z"
     }
    },
    "outputs": [],
@@ -46,12 +46,8 @@
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.agents.format_scratchpad.openai_tools import format_to_openai_tool_messages\n",
     "from environments.game_of_24.common.simple_tools import add, subtract, multiply, divide\n",
-    "from environments.game_of_24.common.evaluate_prompts import (\n",
-    "    GameOf24EvaluateOutputParser,\n",
-    ")\n",
-    "from environments.game_of_24.reflexion.evaluate_prompts import (\n",
-    "    evaluate_prompt,\n",
-    ")\n",
+    "from environments.game_of_24.common.evaluate_parser import GameOf24EvaluateOutputParser\n",
+    "from environments.game_of_24.reflexion.evaluate_prompts import evaluate_prompt\n",
     "from environments.game_of_24.reflexion.generate_prompts import openai_tools_generate_prompt\n",
     "\n",
     "from environments.game_of_24.reflexion.self_reflection_prompts import (\n",
@@ -90,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.632900Z",
-     "start_time": "2024-03-06T15:14:56.621805Z"
+     "end_time": "2024-03-06T15:46:17.564556Z",
+     "start_time": "2024-03-06T15:46:17.554268Z"
     }
    },
    "id": "deb446016899f2b"
@@ -108,8 +104,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.644965Z",
-     "start_time": "2024-03-06T15:14:56.633072Z"
+     "end_time": "2024-03-06T15:46:17.575433Z",
+     "start_time": "2024-03-06T15:46:17.564703Z"
     }
    },
    "id": "8e44e878380dc908"
@@ -140,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.657094Z",
-     "start_time": "2024-03-06T15:14:56.643439Z"
+     "end_time": "2024-03-06T15:46:17.585875Z",
+     "start_time": "2024-03-06T15:46:17.575929Z"
     }
    },
    "id": "711000b9d952a294"
@@ -207,8 +203,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.667643Z",
-     "start_time": "2024-03-06T15:14:56.654250Z"
+     "end_time": "2024-03-06T15:46:18.067376Z",
+     "start_time": "2024-03-06T15:46:18.047306Z"
     }
    },
    "id": "3ae3702b1387d48"
@@ -236,8 +232,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.690482Z",
-     "start_time": "2024-03-06T15:14:56.666916Z"
+     "end_time": "2024-03-06T15:46:18.367541Z",
+     "start_time": "2024-03-06T15:46:18.349647Z"
     }
    },
    "id": "ff36c39e1add5585"
@@ -263,8 +259,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:14:56.962319Z",
-     "start_time": "2024-03-06T15:14:56.950672Z"
+     "end_time": "2024-03-06T15:46:19.081577Z",
+     "start_time": "2024-03-06T15:46:19.068936Z"
     }
    },
    "id": "df0d93627e4e5bb4",
@@ -298,12 +294,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:00.584409Z",
-     "start_time": "2024-03-06T15:15:00.563118Z"
+     "end_time": "2024-03-06T15:46:19.818336Z",
+     "start_time": "2024-03-06T15:46:19.711761Z"
     }
    },
    "id": "8a44035a7b630a4d",
-   "execution_count": 10
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -335,13 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "['agent_outcome', 'inputs', 'intermediate_steps']"
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,15 +348,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:01.630258Z",
-     "start_time": "2024-03-06T15:15:01.618379Z"
+     "end_time": "2024-03-06T15:46:21.250024Z",
+     "start_time": "2024-03-06T15:46:21.224630Z"
     }
    },
    "id": "eb7dcd3839b1953c"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -409,8 +405,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:01.974111Z",
-     "start_time": "2024-03-06T15:15:01.960444Z"
+     "end_time": "2024-03-06T15:46:21.694538Z",
+     "start_time": "2024-03-06T15:46:21.671550Z"
     }
    },
    "id": "5067a1639ff3c9ad"
@@ -427,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "evaluator_runnable = (\n",
@@ -444,8 +440,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:02.773313Z",
-     "start_time": "2024-03-06T15:15:02.746517Z"
+     "end_time": "2024-03-06T15:46:22.753616Z",
+     "start_time": "2024-03-06T15:46:22.728268Z"
     }
    },
    "id": "dc6a14af7a1cc8de"
@@ -488,13 +484,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "['agent_outcome', 'inputs', 'intermediate_steps']"
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,15 +501,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:04.161743Z",
-     "start_time": "2024-03-06T15:15:04.148252Z"
+     "end_time": "2024-03-06T15:46:28.668938Z",
+     "start_time": "2024-03-06T15:46:28.650274Z"
     }
    },
    "id": "796866acdeadec86"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -539,8 +535,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:04.533237Z",
-     "start_time": "2024-03-06T15:15:04.519867Z"
+     "end_time": "2024-03-06T15:46:28.913175Z",
+     "start_time": "2024-03-06T15:46:28.897701Z"
     }
    },
    "id": "c2fd9b4d747fb08a"
@@ -557,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "self_reflection_runnable = (\n",
@@ -574,8 +570,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:05.269672Z",
-     "start_time": "2024-03-06T15:15:05.242004Z"
+     "end_time": "2024-03-06T15:46:32.309337Z",
+     "start_time": "2024-03-06T15:46:32.290245Z"
     }
    },
    "id": "fd75de10e82a649a"
@@ -592,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "reflexion = ReflexionStrategy.create(\n",
@@ -602,8 +598,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:15:06.491940Z",
-     "start_time": "2024-03-06T15:15:06.472562Z"
+     "end_time": "2024-03-06T15:46:32.954535Z",
+     "start_time": "2024-03-06T15:46:32.938689Z"
     }
    },
    "id": "26931470b1253194"
