Support creating ToT+DFS from agent and tools and update README

--- a/environments/game_of_24/reflexion.ipynb
+++ b/environments/game_of_24/reflexion.ipynb
@@ -32,16 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:17.553688Z",
-     "start_time": "2024-03-06T15:46:16.522524Z"
+     "end_time": "2024-03-06T17:21:54.454339Z",
+     "start_time": "2024-03-06T17:21:54.437452Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain.agents.format_scratchpad.openai_tools import format_to_openai_tool_messages\n",
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# os.environ[\"LANGCHAIN_WANDB_TRACING\"] = \"true\"\n",
@@ -86,15 +95,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:17.564556Z",
-     "start_time": "2024-03-06T15:46:17.554268Z"
+     "end_time": "2024-03-06T17:21:54.860829Z",
+     "start_time": "2024-03-06T17:21:54.843074Z"
     }
    },
    "id": "deb446016899f2b"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
@@ -104,8 +113,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:17.575433Z",
-     "start_time": "2024-03-06T15:46:17.564703Z"
+     "end_time": "2024-03-06T17:21:55.072941Z",
+     "start_time": "2024-03-06T17:21:55.058082Z"
     }
    },
    "id": "8e44e878380dc908"
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "# Reflexion hyperparameters\n",
@@ -136,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:17.585875Z",
-     "start_time": "2024-03-06T15:46:17.575929Z"
+     "end_time": "2024-03-06T17:21:55.429632Z",
+     "start_time": "2024-03-06T17:21:55.416169Z"
     }
    },
    "id": "711000b9d952a294"
@@ -186,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "['agent_scratchpad', 'inputs', 'self_reflections']"
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,15 +212,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:18.067376Z",
-     "start_time": "2024-03-06T15:46:18.047306Z"
+     "end_time": "2024-03-06T17:21:56.357293Z",
+     "start_time": "2024-03-06T17:21:56.341831Z"
     }
    },
    "id": "3ae3702b1387d48"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -232,8 +241,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:18.367541Z",
-     "start_time": "2024-03-06T15:46:18.349647Z"
+     "end_time": "2024-03-06T17:21:56.554189Z",
+     "start_time": "2024-03-06T17:21:56.537496Z"
     }
    },
    "id": "ff36c39e1add5585"
@@ -259,12 +268,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:19.081577Z",
-     "start_time": "2024-03-06T15:46:19.068936Z"
+     "end_time": "2024-03-06T17:21:56.942500Z",
+     "start_time": "2024-03-06T17:21:56.926675Z"
     }
    },
    "id": "df0d93627e4e5bb4",
-   "execution_count": 7
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -294,12 +303,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:19.818336Z",
-     "start_time": "2024-03-06T15:46:19.711761Z"
+     "end_time": "2024-03-06T17:21:57.610613Z",
+     "start_time": "2024-03-06T17:21:57.583959Z"
     }
    },
    "id": "8a44035a7b630a4d",
-   "execution_count": 8
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -331,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
       "text/plain": "['agent_outcome', 'inputs', 'intermediate_steps']"
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,15 +357,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:21.250024Z",
-     "start_time": "2024-03-06T15:46:21.224630Z"
+     "end_time": "2024-03-06T17:21:58.473096Z",
+     "start_time": "2024-03-06T17:21:58.460761Z"
     }
    },
    "id": "eb7dcd3839b1953c"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -405,8 +414,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:21.694538Z",
-     "start_time": "2024-03-06T15:46:21.671550Z"
+     "end_time": "2024-03-06T17:21:58.809714Z",
+     "start_time": "2024-03-06T17:21:58.796918Z"
     }
    },
    "id": "5067a1639ff3c9ad"
@@ -423,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "evaluator_runnable = (\n",
@@ -440,8 +449,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:22.753616Z",
-     "start_time": "2024-03-06T15:46:22.728268Z"
+     "end_time": "2024-03-06T17:21:59.554459Z",
+     "start_time": "2024-03-06T17:21:59.533467Z"
     }
    },
    "id": "dc6a14af7a1cc8de"
@@ -484,13 +493,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
       "text/plain": "['agent_outcome', 'inputs', 'intermediate_steps']"
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,15 +510,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:28.668938Z",
-     "start_time": "2024-03-06T15:46:28.650274Z"
+     "end_time": "2024-03-06T17:22:01.148904Z",
+     "start_time": "2024-03-06T17:22:01.134127Z"
     }
    },
    "id": "796866acdeadec86"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -535,8 +544,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:28.913175Z",
-     "start_time": "2024-03-06T15:46:28.897701Z"
+     "end_time": "2024-03-06T17:22:01.569034Z",
+     "start_time": "2024-03-06T17:22:01.556234Z"
     }
    },
    "id": "c2fd9b4d747fb08a"
@@ -553,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "self_reflection_runnable = (\n",
@@ -570,8 +579,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:32.309337Z",
-     "start_time": "2024-03-06T15:46:32.290245Z"
+     "end_time": "2024-03-06T17:22:02.244001Z",
+     "start_time": "2024-03-06T17:22:02.218447Z"
     }
    },
    "id": "fd75de10e82a649a"
@@ -588,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "reflexion = ReflexionStrategy.create(\n",
@@ -598,8 +607,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T15:46:32.954535Z",
-     "start_time": "2024-03-06T15:46:32.938689Z"
+     "end_time": "2024-03-06T17:22:02.834292Z",
+     "start_time": "2024-03-06T17:22:02.814780Z"
     }
    },
    "id": "26931470b1253194"
