Remove pygraphviz dependency (idk how to fix CI 🥹) and fix Reflexion

--- a/environments/game_of_24/reflexion.ipynb
+++ b/environments/game_of_24/reflexion.ipynb
@@ -606,11 +606,13 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "Note: requires separately installing [PyGraphViz](https://pygraphviz.github.io/)."
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "4413278ef85a8ff9"
+   "id": "a6b2886e233e4abf"
   },
   {
    "cell_type": "code",
