Rewrite ADaPT using new components + update ALFWorld example
Also, implemented the planner version that works with tools instead of a single call to a LLM

Also, tweaking the base strategy class to better address the cases when a single agent property won't be applicable

--- a/environments/game_of_24/tot_dfs.ipynb
+++ b/environments/game_of_24/tot_dfs.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from planning_library.strategies import TreeOfThoughtsDFSStrategy\n",
-    "from environments.game_of_24.common.environment import GameOf24Env\n",
+    "from environments.game_of_24.environment import GameOf24Env\n",
     "import os\n",
     "from planning_library.strategies.tot_dfs.components import ThoughtEvaluator, ThoughtGenerator\n",
     "from textwrap import dedent\n",
