--- a/environments/game_of_24/reflexion.ipynb
+++ b/environments/game_of_24/reflexion.ipynb
@@ -26,11 +26,9 @@
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from textwrap import dedent\n",
-    "from environments.game_of_24.reflexion.generate_prompts import openai_tools_generate_prompt\n",
-    "\n",
     "from planning_library.strategies.reflexion import ReflexionStrategy\n",
     "from planning_library.strategies.reflexion.components import ReflexionActor, ReflexionEvaluator, ReflexionSelfReflection\n",
-    "from environments.game_of_24.common.environment import GameOf24Env\n",
+    "from environments.game_of_24.environment import GameOf24Env\n",
     "\n",
     "import os\n",
     "\n",
@@ -156,118 +154,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Working with function calling parsers\n",
-    "\n",
-    "There are two base function calling parsers classes (for single-action & for multi-action), defined in `planning_library.function_calling_parsers.base_parser`. \n",
-    "\n",
-    "I implemented output parsers for OpenAI Functions (in `planning_library.function_calling_parsers.openai_functions_parser`) and OpenAI Tools (in `planning_library.function_calling_parsers.openai_tools_parser`).\n",
-    "\n",
-    "There is also a registry for accessing available parsers conveniently:"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "23bd6a1dcccdf6d3"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['openai-functions', 'openai-tools']"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from planning_library.function_calling_parsers import ParserRegistry\n",
-    "\n",
-    "\n",
-    "ParserRegistry.get_available_parsers()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-17T17:04:56.868634Z",
-     "start_time": "2024-04-17T17:04:56.850606Z"
-    }
-   },
-   "id": "d436b68b58554bcc",
-   "execution_count": 5
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<planning_library.function_calling_parsers.openai_functions_parser.OpenAIFunctionsParser at 0x177d5e810>"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ParserRegistry.get_parser(\"openai-functions\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-17T17:04:57.172108Z",
-     "start_time": "2024-04-17T17:04:57.150558Z"
-    }
-   },
-   "id": "dc62e0f88fd9e2f5",
-   "execution_count": 6
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown parser openai-123. Currently available are: ['openai-functions', 'openai-tools']",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "File \u001B[0;32m~/PycharmProjects/planning-library/planning_library/function_calling_parsers/parser_registry.py:23\u001B[0m, in \u001B[0;36mParserRegistry.get_parser\u001B[0;34m(cls, parser_name)\u001B[0m\n\u001B[1;32m     22\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m---> 23\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mregistry\u001B[49m\u001B[43m[\u001B[49m\u001B[43mparser_name\u001B[49m\u001B[43m]\u001B[49m\n\u001B[1;32m     24\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m:\n",
-      "\u001B[0;31mKeyError\u001B[0m: 'openai-123'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mParserRegistry\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_parser\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mopenai-123\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/PycharmProjects/planning-library/planning_library/function_calling_parsers/parser_registry.py:25\u001B[0m, in \u001B[0;36mParserRegistry.get_parser\u001B[0;34m(cls, parser_name)\u001B[0m\n\u001B[1;32m     23\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mregistry[parser_name]\n\u001B[1;32m     24\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m:\n\u001B[0;32m---> 25\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m     26\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mUnknown parser \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mparser_name\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m. Currently available are: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mget_available_parsers()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     27\u001B[0m     )\n",
-      "\u001B[0;31mValueError\u001B[0m: Unknown parser openai-123. Currently available are: ['openai-functions', 'openai-tools']"
-     ]
-    }
-   ],
-   "source": [
-    "ParserRegistry.get_parser(\"openai-123\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-17T17:04:58.139649Z",
-     "start_time": "2024-04-17T17:04:57.956224Z"
-    }
-   },
-   "id": "8215e89168ce1a32",
-   "execution_count": 7
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Instantiating an agent\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "43d4286579b6ec2e"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "Agent components:\n",
     "\n",
     "* LLM (`BaseChatModel` from LangChain)\n",
@@ -284,64 +170,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from planning_library.components.agent_component import AgentFactory\n",
-    "\n",
-    "# passing parser's name\n",
-    "agent = AgentFactory.create_agent(llm=ChatOpenAI(model=model_name, temperature=temperature), prompt=openai_tools_generate_prompt, tools=env.tools, parser_name=\"openai-tools\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-17T17:04:59.517048Z",
-     "start_time": "2024-04-17T17:04:59.485210Z"
-    }
-   },
-   "id": "8b4fb78057f1c638",
-   "execution_count": 8
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "from planning_library.function_calling_parsers import OpenAIToolsParser\n",
-    "\n",
-    "# passing parser explicitly\n",
-    "agent = AgentFactory.create_agent(llm=ChatOpenAI(model=model_name, temperature=temperature), prompt=openai_tools_generate_prompt, tools=env.tools, parser=OpenAIToolsParser())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-17T17:04:59.854415Z",
-     "start_time": "2024-04-17T17:04:59.825966Z"
-    }
-   },
-   "id": "ce217e236c1ac466",
-   "execution_count": 9
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# one way to define an actor component after agent has been created\n",
-    "actor = ReflexionActor(agent=agent)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-17T17:05:00.173342Z",
-     "start_time": "2024-04-17T17:05:00.152001Z"
-    }
-   },
-   "id": "a3dc51120ddb467b",
-   "execution_count": 10
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# each component powered by agent also has a similar interface\n",
-    "# also, there's an option to define only part of the prompt instead of passing full template; default prompt, specific for current component in current strategy, will be used\n",
-    "actor = ReflexionActor.create(llm=ChatOpenAI(model=model_name, temperature=temperature), tools=env.tools, parser=OpenAIToolsParser(), user_message=dedent(\"\"\"\n",
+    "actor = ReflexionActor.create(llm=ChatOpenAI(model=model_name, temperature=temperature), tools=env.tools, parser_name=\"openai-tools\", user_message=dedent(\"\"\"\n",
     "            You are given four numbers, and your goal is to obtain 24 from given numbers via basic arithmetic operations. \n",
     "            This might be not the first attempt you took, so pay attention to self-reflections about your previous failures. \n",
     "            When you're ready to answer, make sure to include a mathematical expression showing how to obtain 24 from given numbers, \n",
